0.6.6 (?/??/2013):
------------------

- Fixed bug that caused ASSERT error on some systems (and conceivably a
  crash on startup on some) when default_selection line in refind.conf was
  commented out or empty.

- Fixed bug that caused "Binary is whitelisted" message to persist on
  screen after loading MOK-signed drivers in Secure Boot mode.

- Fixed bug that caused rEFInd to ignore the "icon" token in refind.conf
  manual boot stanzas.

- Fixed bug in install.sh that caused the script to fail to update
  drivers when rEFInd was installed in EFI/BOOT/.

0.6.5 (1/16/2013):
------------------

- Improved text color support: rEFInd now uses black text against light
  backgrounds and white text against dark backgrounds.

- Added support for PNGs as banners, icons, and selectors.

- Added icon for ALT Linux.

- Added "safemode" option to "hideui" token, to hide option to boot into
  safe mode for OS X ("-v -x" option to boot.efi).

- Added icon for Haiku (os_haiku.icns).

- Enable transparency of icons & main-menu text when the banner icon is
  sized to cover these areas.

- Fixed bug that could cause rEFInd to crash if fed a banner image that's
  too big. Note that "too big" can be substantially smaller than the screen
  resolution!

0.6.4 (1/8/2013):
-----------------

- Revised install.sh to copy ext2fs driver, rather than ext4fs driver, for
  ext2/3 filesystems. This can help keep non-functional entries from links
  from /vmlinuz to /boot/vmlinuz out of the menu if the system uses ext4fs
  on root and ext2fs or ext3fs on /boot.

- Fixed a couple of memory management bugs that cause rEFInd to hang at
  startup on some systems.

0.6.3 (1/6/2013):
-----------------

- Added the ability to specify a volume name or number in the
  "dont_scan_dirs" and "also_scan_dirs" tokens.

- Fixed a bug that caused removable EFI media to not appear in scan lists
  if rEFInd was installed as EFI/BOOT/boot{arch}.efi on a hard disk.
